--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>نظام حساب تكاليف البناء - العراق</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <style>
         :root {
@@ -799,15 +799,22 @@
                             format: 'a4',
                         });
 
+                        // دالة للتحقق من النصوص ومعالجة القيم الفارغة
+                        const sanitizeText = (text) => {
+                            if (!text || typeof text !== 'string' || text.trim() === '') return 'غير محدد';
+                            // التأكد من أن النص يحتوي فقط على أحرف عربية/إنجليزية/أرقام/رموز شائعة
+                            return text.replace(/[^\u0600-\u06FF\s0-9a-zA-Z.,:()/-]/g, '');
+                        };
+
                         // دالة لإنشاء قسم كـ HTML
                         const createSectionElement = (title, items, isTable = false, isSubsection = false) => {
                             if (!items || items.length === 0) {
-                                console.warn(`قسم "${title}" فارغ، لن يتم إضافته`);
+                                console.warn(`قسم "${sanitizeText(title)}" فارغ، لن يتم إضافته`);
                                 return null;
                             }
 
                             const section = document.createElement('div');
-                            section.style.fontFamily = 'Tajawal, Arial, sans-serif';
+                            section.style.fontFamily = 'Amiri, Arial, sans-serif';
                             section.style.direction = 'rtl';
                             section.style.width = '794px'; // عرض A4 ببكسل (210mm * 3.78px/mm)
                             section.style.padding = '15px';
@@ -826,9 +833,9 @@
                                 header.style.padding = '12px';
                                 header.style.textAlign = 'center';
                                 header.innerHTML = `
-                                    <img src="${pdfData.companyInfo?.logo || 'https://via.placeholder.com/32'}" alt="Logo" style="position: absolute; left: 12px; top: 12px; width: 32px; height: 32px; border-radius: 50%; border: 1px solid #FFF;" onerror="this.style.display='none'"/>
-                                    <h1 style="font-size: 18px; margin: 3px 0;">${title}</h1>
-                                    <p style="font-size: 13px; margin: 3px 0;">إعداد: ${pdfData.companyInfo?.name || 'غير محدد'}</p>
+                                    <img src="${sanitizeText(pdfData.companyInfo?.logo) || 'https://via.placeholder.com/32'}" alt="Logo" style="position: absolute; left: 12px; top: 12px; width: 32px; height: 32px; border-radius: 50%; border: 1px solid #FFF;" onerror="this.style.display='none'"/>
+                                    <h1 style="font-size: 18px; margin: 3px 0;">${sanitizeText(title)}</h1>
+                                    <p style="font-size: 13px; margin: 3px 0;">إعداد: ${sanitizeText(pdfData.companyInfo?.name) || 'غير محدد'}</p>
                                     <p style="font-size: 13px; margin: 3px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
                                 `;
                                 section.appendChild(header);
@@ -836,7 +843,7 @@
                                 const titleEl = document.createElement('h3');
                                 titleEl.style.fontSize = '14px';
                                 titleEl.style.color = '#4B3C2E';
-                                titleEl.textContent = title;
+                                titleEl.textContent = sanitizeText(title);
                                 section.appendChild(titleEl);
                                 const hr = document.createElement('hr');
                                 hr.style.border = '0.4px solid #C19A6B';
@@ -857,14 +864,14 @@
                                 table.style.background = '#FDF6E3';
                                 table.innerHTML = `
                                     <thead><tr><th style="border: 1px solid #DBC2A4; padding: 12px; background: #9B2D30; color: #FFF;">البند</th><th style="border: 1px solid #DBC2A4; padding: 12px; background: #9B2D30; color: #FFF;">القيمة</th></tr></thead>
-                                    <tbody>${items.map(item => `<tr><td style="border: 1px solid #DBC2A4; padding: 12px; background: #FFF;">${item[0] || 'غير محدد'}</td><td style="border: 1px solid #DBC2A4; padding: 12px; background: #FFF;">${item[1] || 'غير محدد'}</td></tr>`).join('')}</tbody>
+                                    <tbody>${items.map(item => `<tr><td style="border: 1px solid #DBC2A4; padding: 12px; background: #FFF;">${sanitizeText(item[0])}</td><td style="border: 1px solid #DBC2A4; padding: 12px; background: #FFF;">${sanitizeText(item[1])}</td></tr>`).join('')}</tbody>
                                 `;
                                 content.appendChild(table);
                             } else {
                                 items.forEach(item => {
                                     const p = document.createElement('p');
                                     p.style.margin = '8px 0';
-                                    p.textContent = item || 'غير محدد';
+                                    p.textContent = sanitizeText(item);
                                     content.appendChild(p);
                                 });
                             }
@@ -875,7 +882,7 @@
                         // دالة لتحويل قسم إلى صورة وإضافته إلى PDF
                         const addSectionToPDF = async (sectionElement, sectionName) => {
                             if (!sectionElement) {
-                                console.warn(`قسم "${sectionName}" لم يتم إنشاؤه بسبب بيانات فارغة`);
+                                console.warn(`قسم "${sanitizeText(sectionName)}" لم يتم إنشاؤه بسبب بيانات فارغة`);
                                 return;
                             }
 
@@ -886,17 +893,17 @@
                                 logging: true,
                                 windowWidth: 794,
                                 windowHeight: sectionElement.scrollHeight,
+                                backgroundColor: null
                             });
                             const imgData = canvas.toDataURL('image/jpeg', 0.95);
                             const imgWidth = 210; // عرض A4 بالمم
-                            const imgHeight = (canvas.height * imgWidth) / canvas.width; // ارتفاع الصورة بالمم
+                            const imgHeight = Math.min((canvas.height * imgWidth) / canvas.width, 297 * 2); // حد أقصى صفحتين لكل قسم
                             const pageHeight = 297; // ارتفاع صفحة A4 بالمم
                             let remainingHeight = imgHeight;
                             let yOffset = 0;
 
-                            console.log(`قسم "${sectionName}": ارتفاع الصورة ${imgHeight} مم, عدد الصفحات المتوقع ${Math.ceil(imgHeight / pageHeight)}`);
+                            console.log(`قسم "${sanitizeText(sectionName)}": ارتفاع الصورة ${imgHeight} مم, عدد الصفحات المتوقع ${Math.ceil(imgHeight / pageHeight)}`);
 
-                            // تقسيم الصورة إذا كانت أطول من صفحة A4
                             while (remainingHeight > 0) {
                                 const currentHeight = Math.min(remainingHeight, pageHeight);
                                 doc.addImage(imgData, 'JPEG', 0, -yOffset / (canvas.width / imgWidth), imgWidth, imgHeight, undefined, 'FAST');
@@ -907,28 +914,33 @@
                                 }
                             }
                             document.body.removeChild(sectionElement);
-                            doc.addPage(); // صفحة جديدة للقسم التالي
+                            if (doc.internal.getNumberOfPages() < 30) { // منع التكرار الزائد
+                                doc.addPage();
+                            }
                         };
 
                         // التحقق من pdfData
                         if (!pdfData || !pdfData.companyInfo || !pdfData.inputData || !pdfData.quantities || !pdfData.engineering || !pdfData.costs || !pdfData.materialPrices) {
                             throw new Error('بيانات pdfData غير مكتملة أو غير موجودة');
                         }
+                        console.log('بيانات pdfData:', JSON.stringify(pdfData, null, 2));
 
-                        // إنشاء الأقسام الستة كصور
+                        // الحد الأقصى للعناصر في كل قسم
+                        const maxItemsPerSection = 6;
+
                         // 1. معلومات الشركة
                         const companyItems = [
-                            `الاسم: ${pdfData.companyInfo?.name || 'غير محدد'}`,
-                            `الوصف: ${pdfData.companyInfo?.description || 'غير محدد'}`,
-                            `الهاتف: ${pdfData.companyInfo?.contact?.phone || 'غير محدد'}`,
-                            `البريد الإلكتروني: ${pdfData.companyInfo?.contact?.email || 'غير محدد'}`,
-                            `العنوان: ${pdfData.companyInfo?.contact?.address || 'غير محدد'}`
-                        ];
+                            `الاسم: ${sanitizeText(pdfData.companyInfo?.name)}`,
+                            `الوصف: ${sanitizeText(pdfData.companyInfo?.description)}`,
+                            `الهاتف: ${sanitizeText(pdfData.companyInfo?.contact?.phone)}`,
+                            `البريد الإلكتروني: ${sanitizeText(pdfData.companyInfo?.contact?.email)}`,
+                            `العنوان: ${sanitizeText(pdfData.companyInfo?.contact?.address)}`
+                        ].filter(item => item !== 'غير محدد').slice(0, maxItemsPerSection);
                         await addSectionToPDF(createSectionElement('معلومات الشركة', companyItems), 'معلومات الشركة');
 
                         // 2. بيانات المدخلات
                         const inputSection = document.createElement('div');
-                        inputSection.style.fontFamily = 'Tajawal, Arial, sans-serif';
+                        inputSection.style.fontFamily = 'Amiri, Arial, sans-serif';
                         inputSection.style.direction = 'rtl';
                         inputSection.style.width = '794px';
                         inputSection.style.padding = '15px';
@@ -946,60 +958,60 @@
                         inputHeader.style.padding = '12px';
                         inputHeader.style.textAlign = 'center';
                         inputHeader.innerHTML = `
-                            <img src="${pdfData.companyInfo?.logo || 'https://via.placeholder.com/32'}" alt="Logo" style="position: absolute; left: 12px; top: 12px; width: 32px; height: 32px; border-radius: 50%; border: 1px solid #FFF;" onerror="this.style.display='none'"/>
+                            <img src="${sanitizeText(pdfData.companyInfo?.logo) || 'https://via.placeholder.com/32'}" alt="Logo" style="position: absolute; left: 12px; top: 12px; width: 32px; height: 32px; border-radius: 50%; border: 1px solid #FFF;" onerror="this.style.display='none'"/>
                             <h1 style="font-size: 18px; margin: 3px 0;">بيانات المدخلات</h1>
-                            <p style="font-size: 13px; margin: 3px 0;">إعداد: ${pdfData.companyInfo?.name || 'غير محدد'}</p>
+                            <p style="font-size: 13px; margin: 3px 0;">إعداد: ${sanitizeText(pdfData.companyInfo?.name) || 'غير محدد'}</p>
                             <p style="font-size: 13px; margin: 3px 0;">التاريخ: ${new Date().toLocaleDateString('ar-IQ')}</p>
                         `;
                         inputSection.appendChild(inputHeader);
 
-                        const customerItems = (pdfData.inputData?.customer?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || 'غير محدد'}`);
+                        const customerItems = (pdfData.inputData?.customer?.fields || []).map(field => `${sanitizeText(field.label)}: ${sanitizeText(field.value)}`).filter(item => item !== 'غير محدد').slice(0, maxItemsPerSection);
                         inputSection.appendChild(createSectionElement(pdfData.inputData?.customer?.title || 'بيانات العميل', customerItems, false, true));
 
-                        const locationItems = (pdfData.inputData?.location?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || 'غير محدد'}`);
+                        const locationItems = (pdfData.inputData?.location?.fields || []).map(field => `${sanitizeText(field.label)}: ${sanitizeText(field.value)}`).filter(item => item !== 'غير محدد').slice(0, maxItemsPerSection);
                         inputSection.appendChild(createSectionElement(pdfData.inputData?.location?.title || 'بيانات الموقع', locationItems, false, true));
 
-                        const landItems = (pdfData.inputData?.land?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || 'غير محدد'} ${field.unit || ''}`);
+                        const landItems = (pdfData.inputData?.land?.fields || []).map(field => `${sanitizeText(field.label)}: ${sanitizeText(field.value)} ${sanitizeText(field.unit)}`).filter(item => item !== 'غير محدد').slice(0, maxItemsPerSection);
                         inputSection.appendChild(createSectionElement(pdfData.inputData?.land?.title || 'بيانات الأرض', landItems, false, true));
 
-                        const buildingItems = (pdfData.inputData?.building?.fields || []).map(field => `${field.label || 'غير محدد'}: ${field.value || 'غير محدد'} ${field.unit || ''}`);
+                        const buildingItems = (pdfData.inputData?.building?.fields || []).map(field => `${sanitizeText(field.label)}: ${sanitizeText(field.value)} ${sanitizeText(field.unit)}`).filter(item => item !== 'غير محدد').slice(0, maxItemsPerSection);
                         inputSection.appendChild(createSectionElement(pdfData.inputData?.building?.title || 'بيانات المبنى', buildingItems, false, true));
 
                         await addSectionToPDF(inputSection, 'بيانات المدخلات');
 
                         // 3. الكميات
                         const quantitiesItems = [];
-                        (pdfData.quantities?.sections || []).forEach(section => {
-                            quantitiesItems.push([section.subtitle || 'غير محدد', '']);
-                            section.items.forEach(item => {
-                                quantitiesItems.push([item.name || 'غير محدد', `${item.value || 'غير محدد'} ${item.unit || ''}`]);
+                        (pdfData.quantities?.sections || []).slice(0, maxItemsPerSection).forEach(section => {
+                            quantitiesItems.push([sanitizeText(section.subtitle) || 'غير محدد', '']);
+                            section.items.slice(0, maxItemsPerSection).forEach(item => {
+                                quantitiesItems.push([sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit)}`]);
                             });
                         });
                         await addSectionToPDF(createSectionElement('تفاصيل الكميات الهندسية', quantitiesItems, true), 'تفاصيل الكميات الهندسية');
 
                         // 4. الحسابات الإنشائية
                         const engineeringItems = [];
-                        (pdfData.engineering?.sections || []).forEach(section => {
-                            engineeringItems.push([section.subtitle || 'غير محدد', '']);
-                            section.items.forEach(item => {
-                                engineeringItems.push([item.name || 'غير محدد', `${item.value || 'غير محدد'} ${item.unit || ''}`]);
+                        (pdfData.engineering?.sections || []).slice(0, maxItemsPerSection).forEach(section => {
+                            engineeringItems.push([sanitizeText(section.subtitle) || 'غير محدد', '']);
+                            section.items.slice(0, maxItemsPerSection).forEach(item => {
+                                engineeringItems.push([sanitizeText(item.name), `${sanitizeText(item.value)} ${sanitizeText(item.unit)}`]);
                             });
                         });
                         await addSectionToPDF(createSectionElement('الحسابات الإنشائية', engineeringItems, true), 'الحسابات الإنشائية');
 
                         // 5. التكاليف
                         const costItems = (pdfData.costs?.items || []).map(item => [
-                            item.name || 'غير محدد',
-                            `${(item.value || 0).toLocaleString('ar-IQ')} ${item.unit || 'غير محدد'}`
-                        ]);
-                        costItems.push(['الإجمالي', `${(pdfData.costs?.total || 0).toLocaleString('ar-IQ')} د.ع`]);
+                            sanitizeText(item.name),
+                            `${sanitizeText((item.value || 0).toLocaleString('ar-IQ'))} ${sanitizeText(item.unit)}`
+                        ]).filter(item => item[0] !== 'غير محدد' && item[1] !== 'غير محدد').slice(0, maxItemsPerSection);
+                        costItems.push(['الإجمالي', `${sanitizeText((pdfData.costs?.total || 0).toLocaleString('ar-IQ'))} د.ع`]);
                         await addSectionToPDF(createSectionElement('تفاصيل التكاليف', costItems, true), 'تفاصيل التكاليف');
 
                         // 6. أسعار المواد
                         const materialItems = (pdfData.materialPrices?.items || []).map(item => [
-                            item.name || 'غير محدد',
-                            `${(item.value || 0).toLocaleString('ar-IQ')} ${item.unit || 'غير محدد'}`
-                        ]);
+                            sanitizeText(item.name),
+                            `${sanitizeText((item.value || 0).toLocaleString('ar-IQ'))} ${sanitizeText(item.unit)}`
+                        ]).filter(item => item[0] !== 'غير محدد' && item[1] !== 'غير محدد').slice(0, maxItemsPerSection);
                         await addSectionToPDF(createSectionElement('أسعار المواد المعتمدة (2025)', materialItems, true), 'أسعار المواد');
 
                         // إزالة الصفحة الفارغة الأخيرة
@@ -1014,7 +1026,7 @@
                             doc.setPage(i);
                             doc.setFontSize(10);
                             doc.setTextColor(75, 60, 46);
-                            doc.text(`صفحة ${i} من ${finalPageCount} | ${pdfData.companyInfo?.name || 'غير محدد'}`, 190, 287, { align: 'right' });
+                            doc.text(`صفحة ${i} من ${finalPageCount} | ${sanitizeText(pdfData.companyInfo?.name) || 'غير محدد'}`, 190, 287, { align: 'right' });
                         }
 
                         // حفظ الملف
